# parallel-async-pyclient

./: .gitignore  README.md  pyproject.toml
src/paspc/: __init__.py
src/paspc/config/: __init__.py  yaml.py
src/paspc/rest/: __init__.py  client.py  parser.py
test/: __init__.py  config.yaml  test_config.py
