[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "paspc"
version = "0.1"
authors = [
    { name = "Xueyuan Jiang", email = "alexxyjiang@gmail.com" }
]
description = "parallel async http client for data processing"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "PyYAML >= 6.0"
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]
