[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "paspc"
version = "0.1"
authors = [
    { name = "Xueyuan Jiang", email = "alexxyjiang@gmail.com" }
]
description = "parallel async http client for data processing"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "aiodns >= 3.0.0",
    "aiohttp >= 3.10.0",
    "brotli >= 1.1.0",
    "pyyaml >= 6.0",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]
